--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>プチナースの実習準備できてる？チェック</title>
+  <title>プチナースの実習準備できてる？診断</title>
   <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet">
 
   <!-- OGP設定 -->
   <meta property="og:title" content="実習準備できてる？チェック" />
   <meta property="og:description" content="10の質問で、準備ばっちりかどうかチェックしてみよう！" />
   <meta property="og:image" content="https://yourdomain.com/ogp-image.png" />
-  <meta property="og:url" content="https://petitnurse-quicknote-diagnosis.netlify.app" />
+  <meta property="og:url" content="https://petitnurse-quicknote-shindan.netlify.app" />
   <meta property="og:type" content="website" />
 
   <!-- Twitterカード設定 -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="実習準備できてる？チェック" />
+  <meta name="twitter:title" content="実習準備できてる？診断" />
   <meta name="twitter:description" content="10の質問で、準備ばっちりかどうかチェックしてみよう！" />
   <meta name="twitter:image" content="https://yourdomain.com/ogp-image.png" />
 
