--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div id="share-buttons" style="margin-top: 12px; display: none;">
     <!-- Xシェア -->
     <a id="share-x" target="_blank">
-    <img src="images/x-logo.svg" alt="Xでシェア" style="width:24px; height:24px; margin-right:8px;">
+    <img src="images/logo-black.png" alt="Xでシェア" style="width:24px; height:24px; margin-right:8px;">
     </a>
 
     <!-- LINEシェア -->
