--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:type" content="website" />
 
   <!-- Twitterカード設定 -->
-  <meta name="twitter:card" content="https://petitnurse-quicknote-shindan.netlify.app/start-image.png" />
+  <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="プチナースの実習準備できてる？診断" />
   <meta name="twitter:description" content="10個の質問で、準備ばっちりかどうかチェックしてみよう！" />
   <meta name="twitter:image" content="https://petitnurse-quicknote-shindan.netlify.app/start-image.png" />
